# AceTreeModel

./: CMakeLists.txt  LICENSE  README.md
cmake/: winrc.cmake
docs/: AceTreeEntity.md  AceTreeModel.md  Contributions.md
docs/drawio/: model.drawio
examples/: CMakeLists.txt
examples/modelcli/: CMakeLists.txt  main.cpp
include/: AceTreeBackend.h  AceTreeEntity.h  AceTreeEvent.h  AceTreeGlobal.h  AceTreeItem.h  AceTreeJournalBackend.h  AceTreeMemBackend.h  AceTreeModel.h  AceTreeNumbersEntity.h  AceTreeObjectEntity.h  AceTreeRecoverable.h  AceTreeStandardEntity.h
include/private/: AceTreeEntity_p.h  AceTreeModel_p.h  AceTreeStandardEntity_p.h
res/: install.cmake  winrc.cmake
src/: CMakeLists.txt  acetreeConfig.cmake.in
src/acetree/: CMakeLists.txt
src/acetree/include/: AceTreeBackend.h  AceTreeEntity.h  AceTreeGlobal.h  AceTreeItem.h  AceTreeJournalBackend.h  AceTreeMacros.h  AceTreeMemBackend.h  AceTreeModel.h  AceTreeNumbersEntity.h  AceTreeObjectEntity.h  AceTreeStandardEntity.h
src/acetree/include/private/: AceTreeEntity_p.h  AceTreeItem_p.h  AceTreeStandardEntity_p.h
src/acetree/src/itemmodel/: AceTreeEntity.cpp  AceTreeEntity_p.h  AceTreeItem.cpp  AceTreeItem_p.h  AceTreeModel.cpp  AceTreeModel_p.h  AceTreeNumbersEntity.cpp  AceTreeObjectEntity.cpp  AceTreeStandardEntity.cpp
src/acetree/src/journal/: Operations.cpp  Operations.h  Tasks.cpp
src/acetree/src/kernel/: AceTreeEvent.cpp  AceTreeEvent_Execute.cpp  AceTreeJournalBackend.cpp  AceTreeJournalBackend_p.h  AceTreeMemBackend.cpp  AceTreeMemBackend_p.h
src/acetree/src/serialization/: serialize_size_t.h
src/examples/: CMakeLists.txt
src/examples/ckptgui/: CMakeLists.txt
src/examples/journalgui/: CMakeLists.txt  MainWindow.h  main.cpp
src/examples/modelcli/: CMakeLists.txt  main.cpp
src/itemmodel/: AceTreeEntity.cpp  AceTreeEntity_p.h  AceTreeItem.cpp  AceTreeItem_p.h  AceTreeModel.cpp  AceTreeModel_p.h  AceTreeNumbersEntity.cpp  AceTreeObjectEntity.cpp  AceTreeStandardEntity.cpp  AceTreeStandardEntity_p.h
src/journal/: Operations.cpp  Operations.h  Tasks.cpp  Tasks.h
src/kernel/: AceTreeBackend.cpp  AceTreeEvent_Execute.cpp  AceTreeJournalBackend.cpp  AceTreeJournalBackend_p.h  AceTreeMemBackend.cpp  AceTreeMemBackend_p.h
src/tests/: CMakeLists.txt  tst_Basic.cpp
src/tools/: CMakeLists.txt
src/tools/atec/: CMakeLists.txt  main.cpp
src/tools/capi/: CMakeLists.txt  capi.cpp  capi.h
tests/: CMakeLists.txt
